fix scrollbar issue in workspace page

--- a/src/app/browse/browse/browse.component.css
+++ b/src/app/browse/browse/browse.component.css
@@ -798,7 +798,8 @@ color: #413E3C;
 }
 .insideScroll{
   padding: 0px;
-  max-height: 100vh;
+  margin-bottom: 20px;
+  /* min-height: 100vh; */
   overflow: auto;
 }
 ::ng-deep .all-sectors li #fileId2 {
